# pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysnippet"
version = "0.1.0"
authors = [
    {name = "Philip", email = "philip741@gmail.com"},
]
description = "A CLI tool to manage code snippets"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "prompt-toolkit",
    "pyperclip"
]

[project.scripts]
pysnippet = "pysnippet.cli:main"
